// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Input > renders with ariaLabel correctly 1`] = `
"<div data-slot="root" class="">
  <!--v-if--><input type="text" data-slot="base" autocomplete="off" aria-label="Aria label">
  <!--v-if-->
</div>"
`;

exports[`Input > renders with as correctly 1`] = `
"<section data-slot="root" class="">
  <!--v-if--><input type="text" data-slot="base" autocomplete="off">
  <!--v-if-->
</section>"
`;

exports[`Input > renders with avatar and leadingIcon correctly 1`] = `
"<div data-slot="root" class=""><span data-slot="leading" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class=""></svg></span><input type="text" data-slot="base" autocomplete="off">
  <!--v-if-->
</div>"
`;

exports[`Input > renders with avatar and trailingIcon correctly 1`] = `"<div data-slot="root" class=""><span data-slot="leading" class=""><span data-slot="root"><img src="https://github.com/benjamincanac.png" data-slot="image"></span></span><input type="text" data-slot="base" autocomplete="off"><span data-slot="trailing" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="trailingIcon" class=""></svg></span></div>"`;

exports[`Input > renders with avatar correctly 1`] = `
"<div data-slot="root" class=""><span data-slot="leading" class=""><span data-slot="root"><img src="https://github.com/benjamincanac.png" data-slot="image"></span></span><input type="text" data-slot="base" autocomplete="off">
  <!--v-if-->
</div>"
`;

exports[`Input > renders with class correctly 1`] = `
"<div data-slot="root" class="absolute">
  <!--v-if--><input type="text" data-slot="base" autocomplete="off">
  <!--v-if-->
</div>"
`;

exports[`Input > renders with default slot correctly 1`] = `
"<div data-slot="root" class="">
  <!--v-if--><input type="text" data-slot="base" autocomplete="off">Default slot
  <!--v-if-->
</div>"
`;

exports[`Input > renders with disabled correctly 1`] = `
"<div data-slot="root" class="">
  <!--v-if--><input type="text" data-slot="base" disabled="" autocomplete="off">
  <!--v-if-->
</div>"
`;

exports[`Input > renders with file type correctly 1`] = `
"<div data-slot="root" class="">
  <!--v-if--><input type="file" data-slot="base" autocomplete="off">
  <!--v-if-->
</div>"
`;

exports[`Input > renders with icon correctly 1`] = `
"<div data-slot="root" class=""><span data-slot="leading" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class=""></svg></span><input type="text" data-slot="base" autocomplete="off">
  <!--v-if-->
</div>"
`;

exports[`Input > renders with id correctly 1`] = `
"<div data-slot="root" class="">
  <!--v-if--><input id="id" type="text" data-slot="base" autocomplete="off">
  <!--v-if-->
</div>"
`;

exports[`Input > renders with leading and icon correctly 1`] = `
"<div data-slot="root" class=""><span data-slot="leading" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class=""></svg></span><input type="text" data-slot="base" autocomplete="off">
  <!--v-if-->
</div>"
`;

exports[`Input > renders with leading slot correctly 1`] = `
"<div data-slot="root" class=""><span data-slot="leading" class="">Leading slot</span><input type="text" data-slot="base" autocomplete="off">
  <!--v-if-->
</div>"
`;

exports[`Input > renders with leadingIcon correctly 1`] = `
"<div data-slot="root" class=""><span data-slot="leading" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class=""></svg></span><input type="text" data-slot="base" autocomplete="off">
  <!--v-if-->
</div>"
`;

exports[`Input > renders with loading and avatar correctly 1`] = `
"<div data-slot="root" class=""><span data-slot="leading" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class=""></svg></span><input type="text" data-slot="base" autocomplete="off">
  <!--v-if-->
</div>"
`;

exports[`Input > renders with loading correctly 1`] = `
"<div data-slot="root" class=""><span data-slot="leading" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class=""></svg></span><input type="text" data-slot="base" autocomplete="off">
  <!--v-if-->
</div>"
`;

exports[`Input > renders with loading trailing and avatar correctly 1`] = `"<div data-slot="root" class=""><span data-slot="leading" class=""><span data-slot="root"><img src="https://github.com/benjamincanac.png" data-slot="image"></span></span><input type="text" data-slot="base" autocomplete="off"><span data-slot="trailing" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="trailingIcon" class=""></svg></span></div>"`;

exports[`Input > renders with loading trailing correctly 1`] = `
"<div data-slot="root" class="">
  <!--v-if--><input type="text" data-slot="base" autocomplete="off"><span data-slot="trailing" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="trailingIcon" class=""></svg></span>
</div>"
`;

exports[`Input > renders with loadingIcon correctly 1`] = `
"<div data-slot="root" class=""><span data-slot="leading" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class=""></svg></span><input type="text" data-slot="base" autocomplete="off">
  <!--v-if-->
</div>"
`;

exports[`Input > renders with name correctly 1`] = `
"<div data-slot="root" class="">
  <!--v-if--><input type="text" name="name" data-slot="base" autocomplete="off">
  <!--v-if-->
</div>"
`;

exports[`Input > renders with neutral variant ghost correctly 1`] = `
"<div data-slot="root" class="">
  <!--v-if--><input type="text" data-slot="base" autocomplete="off">
  <!--v-if-->
</div>"
`;

exports[`Input > renders with neutral variant none correctly 1`] = `
"<div data-slot="root" class="">
  <!--v-if--><input type="text" data-slot="base" autocomplete="off">
  <!--v-if-->
</div>"
`;

exports[`Input > renders with neutral variant outline correctly 1`] = `
"<div data-slot="root" class="">
  <!--v-if--><input type="text" data-slot="base" autocomplete="off">
  <!--v-if-->
</div>"
`;

exports[`Input > renders with neutral variant soft correctly 1`] = `
"<div data-slot="root" class="">
  <!--v-if--><input type="text" data-slot="base" autocomplete="off">
  <!--v-if-->
</div>"
`;

exports[`Input > renders with neutral variant subtle correctly 1`] = `
"<div data-slot="root" class="">
  <!--v-if--><input type="text" data-slot="base" autocomplete="off">
  <!--v-if-->
</div>"
`;

exports[`Input > renders with placeholder correctly 1`] = `
"<div data-slot="root" class="">
  <!--v-if--><input type="text" placeholder="Search..." data-slot="base" autocomplete="off">
  <!--v-if-->
</div>"
`;

exports[`Input > renders with pohon correctly 1`] = `
"<div data-slot="root" class="">
  <!--v-if--><input type="text" data-slot="base" class="rounded-full" autocomplete="off">
  <!--v-if-->
</div>"
`;

exports[`Input > renders with primary variant ghost correctly 1`] = `
"<div data-slot="root" class="">
  <!--v-if--><input type="text" data-slot="base" autocomplete="off">
  <!--v-if-->
</div>"
`;

exports[`Input > renders with primary variant none correctly 1`] = `
"<div data-slot="root" class="">
  <!--v-if--><input type="text" data-slot="base" autocomplete="off">
  <!--v-if-->
</div>"
`;

exports[`Input > renders with primary variant outline correctly 1`] = `
"<div data-slot="root" class="">
  <!--v-if--><input type="text" data-slot="base" autocomplete="off">
  <!--v-if-->
</div>"
`;

exports[`Input > renders with primary variant soft correctly 1`] = `
"<div data-slot="root" class="">
  <!--v-if--><input type="text" data-slot="base" autocomplete="off">
  <!--v-if-->
</div>"
`;

exports[`Input > renders with primary variant subtle correctly 1`] = `
"<div data-slot="root" class="">
  <!--v-if--><input type="text" data-slot="base" autocomplete="off">
  <!--v-if-->
</div>"
`;

exports[`Input > renders with required correctly 1`] = `
"<div data-slot="root" class="">
  <!--v-if--><input type="text" data-slot="base" required="" autocomplete="off">
  <!--v-if-->
</div>"
`;

exports[`Input > renders with size lg correctly 1`] = `
"<div data-slot="root" class="">
  <!--v-if--><input type="text" data-slot="base" autocomplete="off">
  <!--v-if-->
</div>"
`;

exports[`Input > renders with size md correctly 1`] = `
"<div data-slot="root" class="">
  <!--v-if--><input type="text" data-slot="base" autocomplete="off">
  <!--v-if-->
</div>"
`;

exports[`Input > renders with size sm correctly 1`] = `
"<div data-slot="root" class="">
  <!--v-if--><input type="text" data-slot="base" autocomplete="off">
  <!--v-if-->
</div>"
`;

exports[`Input > renders with size xl correctly 1`] = `
"<div data-slot="root" class="">
  <!--v-if--><input type="text" data-slot="base" autocomplete="off">
  <!--v-if-->
</div>"
`;

exports[`Input > renders with size xs correctly 1`] = `
"<div data-slot="root" class="">
  <!--v-if--><input type="text" data-slot="base" autocomplete="off">
  <!--v-if-->
</div>"
`;

exports[`Input > renders with trailing and icon correctly 1`] = `
"<div data-slot="root" class="">
  <!--v-if--><input type="text" data-slot="base" autocomplete="off"><span data-slot="trailing" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="trailingIcon" class=""></svg></span>
</div>"
`;

exports[`Input > renders with trailing slot correctly 1`] = `
"<div data-slot="root" class="">
  <!--v-if--><input type="text" data-slot="base" autocomplete="off"><span data-slot="trailing" class="">Trailing slot</span>
</div>"
`;

exports[`Input > renders with trailingIcon correctly 1`] = `
"<div data-slot="root" class="">
  <!--v-if--><input type="text" data-slot="base" autocomplete="off"><span data-slot="trailing" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="trailingIcon" class=""></svg></span>
</div>"
`;

exports[`Input > renders with type correctly 1`] = `
"<div data-slot="root" class="">
  <!--v-if--><input type="password" data-slot="base" autocomplete="off">
  <!--v-if-->
</div>"
`;
